Mudando tudo para terminar

--- a/index.html
+++ b/index.html
@@ -14,27 +14,35 @@
 
         <div id="numpad">
             <div>
-                <button id="botao" class="botão" onclick="insert('1')">1</button>
-                <button id="botao" class="botão" onclick="insert('2')">2</button>
-                <button id="botao" class="botão" onclick="insert('3')">3</button>
+                <td><button id="botao" class="botão" onclick="insert('C')">C</button></td>
+                <td><button id="botao" class="botão" onclick="insert(',')">,</button></td>
+                <td><button id="botao" class="botão" onclick="insert('/')">/</button></td>
+                <td><button id="botao" class="botão" onclick="insert('x')">X</button></td>
+            </div>
+            <div>
+                <td><button id="botao" class="botão" onclick="insert('7')">7</button></td>
+                <td><button id="botao" class="botão" onclick="insert('8')">8</button></td>
+                <td><button id="botao" class="botão" onclick="insert('9')">9</button></td>
+                <td><button id="botao" class="botão" onclick="insert('menos')">-</button></td>
             </div>
 
             <div>
-                <button id="botao" class="botão" onclick="insert('4')">4</button>
-                <button id="botao" class="botão" onclick="insert('5')">5</button>
-                <button id="botao" class="botão" onclick="insert('6')">6</button>
+                <td><button id="botao" class="botão" onclick="insert('4')">4</button></td>
+                <td><button id="botao" class="botão" onclick="insert('5')">5</button></td>
+                <td><button id="botao" class="botão" onclick="insert('6')">6</button></td>
+                <td><button id="botao" class="botão" onclick="insert('mais')">+</button></td>
             </div>
 
             <div>
-                <button id="botao" class="botão" onclick="insert('7')">7</button>
-                <button id="botao" class="botão" onclick="insert('8')">8</button>
-                <button id="botao" class="botão" onclick="insert('9')">9</button>
+                <td><button id="botao" class="botão" onclick="insert('1')">1</button></td>
+                <td><button id="botao" class="botão" onclick="insert('2')">2</button></td>
+                <td><button id="botao" class="botão" onclick="insert('3')">3</button></td>
+                <td colspan="2"><button id="botao" class="botão" onclick="insert('igual')">=</button></td>
             </div>
 
             <div>
-                <button id="botao" class="botão" onclick="insert('+')">+</button>
-                <button id="botao" class="botão" onclick="insert('0')">0</button>
-                <button id="botao" class="botão" onclick="insert('-')">-</button>
+                <td rowspan="2"><button id="botao" class="botão" onclick="insert('0')">0</button></td>
+                <td><button id="botao" class="botão" onclick="insert('ponto')">.</button></td>
             </div>
             
         </div>
