--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,45 +8,47 @@
     <title>Calculadora</title>
 </head>
 <body>
-    <main id="calculadora"><p>Calculadora</p>
 
-        <div id="visor">Resultado</div>
+    <h2>João Angrezani</h2>
 
-        <div id="numpad">
-            <div>
-                <td><button id="botao" class="botão" onclick="insert('C')">C</button></td>
-                <td><button id="botao" class="botão" onclick="insert(',')">,</button></td>
-                <td><button id="botao" class="botão" onclick="insert('/')">/</button></td>
-                <td><button id="botao" class="botão" onclick="insert('x')">X</button></td>
-            </div>
-            <div>
-                <td><button id="botao" class="botão" onclick="insert('7')">7</button></td>
-                <td><button id="botao" class="botão" onclick="insert('8')">8</button></td>
-                <td><button id="botao" class="botão" onclick="insert('9')">9</button></td>
-                <td><button id="botao" class="botão" onclick="insert('menos')">-</button></td>
-            </div>
+    <div id="calculadora">
+        <h1>Calculadora</h1>
+        <p id="visor"></p>
+        <table id="numpad">
+            <tr>
+                <td><button class="botao" onclick="clean()">C</button></td>
+                <td><button class="botao" onclick="back()"><</button></td>
+                <td><button class="botao" onclick="insert('/')">/</button></td>
+                <td><button class="botao" onclick="insert('*')">X</button></td>
+            </tr>
+            <tr>
+                <td><button class="botao" onclick="insert('7')">7</button></td>
+                <td><button class="botao" onclick="insert('8')">8</button></td>
+                <td><button class="botao" onclick="insert('9')">9</button></td>
+                <td><button class="botao" onclick="insert('-')">-</button></td>
+            </tr>
 
-            <div>
-                <td><button id="botao" class="botão" onclick="insert('4')">4</button></td>
-                <td><button id="botao" class="botão" onclick="insert('5')">5</button></td>
-                <td><button id="botao" class="botão" onclick="insert('6')">6</button></td>
-                <td><button id="botao" class="botão" onclick="insert('mais')">+</button></td>
-            </div>
+            <tr>
+                <td><button class="botao" onclick="insert('4')">4</button></td>
+                <td><button class="botao" onclick="insert('5')">5</button></td>
+                <td><button class="botao" onclick="insert('6')">6</button></td>
+                <td><button class="botao" onclick="insert('+')">+</button></td>
+            </tr>
 
-            <div>
-                <td><button id="botao" class="botão" onclick="insert('1')">1</button></td>
-                <td><button id="botao" class="botão" onclick="insert('2')">2</button></td>
-                <td><button id="botao" class="botão" onclick="insert('3')">3</button></td>
-                <td colspan="2"><button id="botao" class="botão" onclick="insert('igual')">=</button></td>
-            </div>
+            <tr>
+                <td><button class="botao" onclick="insert('1')">1</button></td>
+                <td><button class="botao" onclick="insert('2')">2</button></td>
+                <td><button class="botao" onclick="insert('3')">3</button></td>
+                <td rowspan="2" ><button class="botao" onclick="calcular()"style="height: 108px;">=</button></td>
+            </tr>
 
-            <div>
-                <td rowspan="2"><button id="botao" class="botão" onclick="insert('0')">0</button></td>
-                <td><button id="botao" class="botão" onclick="insert('ponto')">.</button></td>
-            </div>
+            <tr>
+                <td colspan="2"><button class="botao" onclick="insert('0')" style="width: 108px;">0</button></td>
+                <td><button class="botao" onclick="insert('.')">.</button></td>
+            </tr>
             
+        </table>
         </div>
-    </main>
     <script src="area.js"></script>
 
 </body>
