Alterei o arquivo script

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             
         </table>
         </div>
-    <script src="area.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
